--- a/templates/default/wp-config.php.erb
+++ b/templates/default/wp-config.php.erb
@@ -14,6 +14,12 @@
  * @package WordPress
  */
 
+// in some setups HTTP_X_FORWARDED_PROTO might contain 
+// a comma-separated list e.g. http,https
+// so check for https existence
+if (strpos($_SERVER['HTTP_X_FORWARDED_PROTO'], 'https') !== false)
+			 $_SERVER['HTTPS']='on';
+			 
 // ** MySQL settings - You can get this info from your web host ** //
 /** The name of the database for WordPress */
 define('DB_NAME', '<%= @db_name %>');
